# bulk-record-processing-system

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
app/: bootstrap.py  main.py
app/api/: app_containers.py  routes.py  schemas.py  utils.py
app/application/ports/: batch_repository.py  batch_task_dispatcher.py  hospital_directory_gateway.py  repositories.py
app/application/services/: csv_parser.py  retry.py
app/application/use_cases/: bulk_create.py  bulk_create_hospitals.py  get_batch_status.py  get_status.py  submit_bulk_create_hospitals.py  submit_task.py  validate_csv.py
app/domain/: exceptions.py  models.py
app/infrastructure/: bootstrap_support.py  settings.py  utils.py
app/infrastructure/clients/: external_api.py  hospital_directory_api.py
app/infrastructure/repositories/: in_memory.py  in_memory_batch_repository.py  redis.py  redis_batch_repository.py
app/infrastructure/serialization/: batches.py
app/infrastructure/serializers/: types.py  utils.py
app/infrastructure/task_dispatchers/: celery.py  in_memory.py
app/worker/: celery_app.py
app/workers/: constants.py  tasks.py
scripts/: remote_api_test_runner.py
tests/integration/: test_api.py
tests/unit/: test_batch_serialization.py  test_bulk_create_hospitals.py  test_celery_dispatcher.py  test_redis_batch_repository_md5.py  test_submit_bulk_create_hospitals.py
