[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "bulk-record-processing-system"
version = "0.1.0"
description = "Bulk hospital processing service built with FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.12",
  "httpx==0.28.1",
  "python-multipart==0.0.20",
  "uvicorn==0.34.2",
]

[dependency-groups]
dev = [
  "basedpyright==1.39.6",
  "pre-commit==4.3.0",
  "pytest==8.3.5",
  "pytest-asyncio==0.26.0",
  "ruff==0.15.15",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF"]
ignore = ["B008"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
